IPP/project/LL_gramatics
<prog>      ->  <command> <enter> <prog>
<prog>      ->  \0
<enter>     ->  \n <another_enter>
<enter>     ->  \0
<another_enter> ->  <enter>
<another_enter> ->  epsilon

<command>   ->  ...
<command>   ->  epsilon

<var>       ->  ...
<symb>      ->  ...
<label>     ->  ...
<data_type> ->  ...
